ビジネスロジックの追加
