# src/calc/gen/http/openapi3.yaml
@@ -20,9 +20,9 @@ paths:
         schema:
           type: integer
           description: Left operand
-          example: 5401762099778430809
+          example: 1228682945796019344
           format: int64
-        example: 1918630006328122782
+        example: 4886963557863946648
       - name: b
         in: path
         description: Right operand
@@ -30,9 +30,9 @@ paths:
         schema:
           type: integer
           description: Right operand
-          example: 4288748512599820841
+          example: 6642806206162570878
           format: int64
-        example: 4212629202012168060
+        example: 8723986392256123438
       responses:
         "200":
           description: OK response.
@@ -40,7 +40,44 @@ paths:
             application/json:
               schema:
                 type: integer
-                example: 8803302123552712831
+                example: 7309877832173772408
                 format: int64
-              example: 1698882017578366363
+              example: 9092197569596372935
+  /minus/{a}/{b}:
+    get:
+      tags:
+      - calc2
+      summary: minus calc2
+      operationId: calc2#minus
+      parameters:
+      - name: a
+        in: path
+        description: Left operand
+        required: true
+        schema:
+          type: integer
+          description: Left operand
+          example: 2937026320033011362
+          format: int64
+        example: 207017106558923967
+      - name: b
+        in: path
+        description: Right operand
+        required: true
+        schema:
+          type: integer
+          description: Right operand
+          example: 6001261670528037577
+          format: int64
+        example: 5850431520333673251
+      responses:
+        "200":
+          description: OK response.
+          content:
+            application/json:
+              schema:
+                type: integer
+                example: 3237209857320107068
+                format: int64
+              example: 1089204046671954241
 components: {}
